<resources>
    <string name="app_name">TrainYourself</string>
    <string name="email">Email : </string>
    <string name="pseudo">Pseudo : </string>
    <string name="mot_de_passe">Mot de passe : </string>
    <string name="se_connecter">Se connecter </string>
    <string name="se_souvenir_de_moi">Se souvenir de moi ? </string>
    <string name="accueil">Accueil </string>
    <string name="lecture">Lire</string>
    <string name="test">Test</string>
    <string name="liste_categorie1">Histoire</string>
    <string name="liste_categorie2">Coups</string>
    <string name="liste_categorie3">Déplacements</string>
    <string name="liste_categorie4">Enchainements</string>
    <string name="liste_categorie5">Feintes</string>
    <string name="liste_categorie6">Made In</string>
    <string name="liste_categorie7">Légendes</string>
    <string name="liste_categorie8">Annexes</string>
    <string name="enchainements_base1"> JabOpener CrossPunch / 1o . 2P  </string>
    <string name="enchainements_base2"> JabOpener Jabto(Feint/Low/Speed ) CrossPunch / 1o . 1T . 2P  </string>
    <string name="enchainements_base3"> JabOpener Crossto(F/L/S) JabPunch / 1o . 2T . 1P </string>
    <string name="enchainements_base4"> JabOpener CrossSpeed HookHeadPunch / 1o . 2S . 3P </string>
    <string name="enchainements_base5"> JabOpener RetraitCorps JabSpeed CrossPunch / 1o . 5S. 1S . 2P </string>
    <string name="enchainements_base6"> JabOpener CrossSpeed HookHeadPunch RetraitCorps JabRemise/ 1o . 2S . 3P . 5S . 1R </string>
    <string name="enchainements_base7"> UppercutLeftDown UppercutRightDown UppercutLeftHeadto StepBack CrossSmash  / 6o . 8S . 6T . 5SB . 2P </string>
    <string name="enchainements_base8"> JabSpeedHead CrossSpeedHead JabSpeedHead CrossSpeedHead JabPunchHead / 1S . 2S . 1S . 2S .1p </string>
    <string name="enchainements_tyson"> HookPunchDownTo ChangeGuard UppercutRightHead  / 4P . 8P </string>

    <string name="feinte_base1"> JabFeintHead JabSpeedDown / 1FH . 1SD </string>
    <string name="feinte_base2"> JabFeintDown JabSpeedHead / 1FD . 1SH </string>
    <string name="feinte_base3"> JabFeinteHaute JabSpeedHead / 1FH . 1SH </string>
    <string name="feinte_base4"> HandFeintRoll JabPunchHead / 2FR . 1PH </string>
    <string name="feinte_base5"> JabFeintLazy JabSpeedHead  HookPunchHead / 1FL . 1SD . 3PH </string>


</resources>