<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".Enchainements"
    >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:id="@+id/enchainements_base1"
            android:layout_width="124dp"
            android:layout_height="127dp"
            android:text="@string/enchainements_base1" />

        <TextView
            android:id="@+id/enchainements_base2"
            android:layout_width="137dp"
            android:layout_height="127dp"
            android:text="@string/enchainements_base2" />

        <TextView
            android:id="@+id/enchainements_base3"
            android:layout_width="147dp"
            android:layout_height="127dp"
            android:text="@string/enchainements_base3" />

        <TextView
            android:id="@+id/enchainements_base4"
            android:layout_width="125dp"
            android:layout_height="144dp"
            android:text="@string/enchainements_base4"

            />

        <TextView
            android:id="@+id/enchainements_base5"
            android:layout_width="136dp"
            android:layout_height="144dp"
            android:text="@string/enchainements_base5" />

        <TextView
            android:id="@+id/enchainements_base6"
            android:layout_width="149dp"
            android:layout_height="144dp"
            android:text="@string/enchainements_base6" />
    </GridLayout>

    <Button
        android:id="@+id/button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        />


    <TextView
        android:id="@+id/fleche_droite"
        android:layout_width="121dp"
        android:layout_height="119dp"
        android:layout_marginTop="50dp"
        app:drawableBottomCompat="@drawable/fleche_droite"
        android:textColor="#000000"
        />


</LinearLayout>