<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feintes">

    <TextView
        android:id="@+id/enchainements_base7"
        android:layout_width="125dp"
        android:layout_height="130dp"
        android:text="@string/enchainements_base7" />

    <TextView
        android:id="@+id/enchainements_base8"
        android:layout_width="137dp"
        android:layout_height="130dp"
        android:text="@string/enchainements_base8" />

    <TextView
        android:id="@+id/enchainements_tyson"
        android:layout_width="149dp"
        android:layout_height="130dp"
        android:text="@string/enchainements_tyson" />


</LinearLayout>