<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pseudo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:id="@+id/pseudo_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo_tv"
        />
    <TextView
        android:id="@+id/mot_de_passe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe"
        android:layout_below="@id/pseudo_et"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <EditText
        android:id="@+id/mot_de_passe_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mot_de_passe_tv"
        />
    <CheckBox
        android:id="@+id/se_souvenir_de_moi_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mot_de_passe_et"
        android:text="@string/se_souvenir_de_moi"
        />
    <Button
        android:id="@+id/se_connecter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:layout_below="@id/se_souvenir_de_moi_cb"
        />

</RelativeLayout>